HTML Main components finished, CSS needed

--- a/HTMLCode/AnonymousUser/Login.html
+++ b/HTMLCode/AnonymousUser/Login.html
@@ -15,13 +15,12 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet"  href="/ResourcesForCSS/Shapes.css"/>
 
     <title>Login</title>
   </head>
   <body>
-    <!-- <h1 class="text-center">Hello, world!</h1> -->
-
-    <!-- This is the outisde panel -->
+    <!-- This is the outside panel -->
     <div
       class="container d-flex justify-content-center align-items-center"
       style="min-height: 100vh"
@@ -32,46 +31,27 @@
           <!-- This is the form on login site -->
           <form>
             <div class="form-group">
-              <label for="exampleInputEmail1"
-                >Email adresa / korisničko ime</label
-              >
-              <input
-                type="email"
-                class="form-control"
-                id="exampleInputEmail1"
-                aria-describedby="emailHelp"
-              />
+              <label for="exampleInputEmail1">Email adresa / korisničko ime</label>
+              <input class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
               <small id="emailHelp" class="form-text text-muted"
                 >Nikada nećemo dijeliti vašu e-poštu ni s kim drugim.</small
               >
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Lozinka</label>
-              <input
-                type="password"
-                class="form-control"
-                id="exampleInputPassword1"
-              />
+              <input type="password" class="form-control" id="exampleInputPassword1" />
             </div>
             <div class="form-group form-check">
-              <input
-                type="checkbox"
-                class="form-check-input"
-                id="exampleCheck1"
-              />
-              <label class="form-check-label" for="exampleCheck1"
-                >Zapamti me</label
-              >
+              <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+              <label class="form-check-label" for="exampleCheck1">Zapamti me</label>
             </div>
 
             <div>
-              <button type="submit" class="btn btn-primary mb-3">
-                Logiraj se
-              </button>
+              <button type="submit" class="btn btn-primary mb-3">Logiraj se</button>
             </div>
             <div>
               <p class="mb-0">
-                Zaboravio si lozinku? <a href="url">Resetiraj lozinku</a>
+                Zaboravio si lozinku? <a href="../workInProgress.html">Resetiraj lozinku</a>
               </p>
             </div>
             <div>
@@ -80,6 +60,12 @@
           </form>
         </div>
       </div>
+    </div>
+
+    <!-- Background shapes -->
+    <div class="background-shapes">
+      <div class="triangle"></div>
+      <div class="rectangle"></div>
     </div>
 
     <!-- Optional JavaScript -->
