--- a/HTMLCode/AnonymousUser/Registration.html
+++ b/HTMLCode/AnonymousUser/Registration.html
@@ -16,6 +16,8 @@
       crossorigin="anonymous"
     />
 
+    <link rel="stylesheet"  href="/ResourcesForCSS/Shapes.css"/>
+
     <title>Registration</title>
   </head>
   <body>
@@ -31,7 +33,7 @@
            <!-- This is the form on login site -->
           <form>
             <div class="form-group">
-              <label for="exampleInputEmail1">Email adresa / korisničko ime</label>
+              <label for="exampleInputEmail1">Email adresa / korisničko ime:</label>
               <input
                 type="email"
                 class="form-control"
@@ -72,6 +74,12 @@
           </form>
         </div>
       </div>
+    </div>
+
+   <!-- Background shapes -->
+    <div class="background-shapes">
+      <div class="triangle"></div>
+      <div class="rectangle"></div>
     </div>
 
     <!-- Optional JavaScript -->
