--- a/HTMLCode/AnonymousUser/PlayerAnswers.html
+++ b/HTMLCode/AnonymousUser/PlayerAnswers.html
@@ -3,7 +3,10 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
     <link
@@ -12,11 +15,29 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
 
     <style>
       .answer-buttons {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
         position: relative;
       }
+
+      .btn-answer {
+        width: 100%;
+        height: 150px;
+        font-size: 1.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
 
       .answer-buttons .overlay {
         position: absolute;
@@ -27,39 +48,36 @@
         background-color: rgba(255, 255, 255, 0.8);
         z-index: 10;
       }
-
-      .btn-answer {
-        width: 100%;
-        height: 150px;
-        font-size: 1.5rem;
-      }
-
-      @media (max-width: 767.98px) {
-        .btn-answer {
-          height: 100px;
-          font-size: 1.2rem;
-        }
-      }
     </style>
 
     <title>Kahoot</title>
   </head>
   <body>
-    <div class="container text-center mt-5">
-      <h1 class="mb-4">What is the capital of France?</h1>
+    <h1 class="mb-4">Game-pin: 5819</h1>
+    <div class="container text-center mt-2">
+      
+
       <div class="row answer-buttons">
         <div class="overlay" id="overlay"></div>
         <div class="col-md-6 mb-3">
-          <button class="btn btn-danger btn-answer">Answer 1</button>
+          <button class="btn btn-danger btn-answer">
+            <i class="fas fa-star fa-3x"></i>
+          </button>
         </div>
         <div class="col-md-6 mb-3">
-          <button class="btn btn-primary btn-answer">Answer 2</button>
+          <button class="btn btn-primary btn-answer">
+            <i class="fas fa-heart fa-3x"></i>
+          </button>
         </div>
         <div class="col-md-6 mb-3">
-          <button class="btn btn-warning btn-answer">Answer 3</button>
+          <button class="btn btn-warning btn-answer">
+            <i class="fas fa-smile fa-3x"></i>
+          </button>
         </div>
         <div class="col-md-6 mb-3">
-          <button class="btn btn-success btn-answer">Answer 4</button>
+          <button class="btn btn-success btn-answer">
+            <i class="fas fa-thumbs-up fa-3x"></i>
+          </button>
         </div>
       </div>
     </div>
@@ -83,6 +101,8 @@
     ></script>
 
     <!-- OVO TREBA FIXAT!! sakrije buttons prije nego mogu odgovoriti. ali cu vjerovatno koristiti loading gif -->
-    <script>document.getElementById('overlay').style.display = 'none';</script>
+    <script>
+      document.getElementById("overlay").style.display = "none";
+    </script>
   </body>
 </html>
