--- a/HTMLCode/LoggedInUser(SessionRequired)/CreateKahootQuiz.html
+++ b/HTMLCode/LoggedInUser(SessionRequired)/CreateKahootQuiz.html
@@ -44,20 +44,25 @@
 <body>
     <!-- Top Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Kahoot</a>
+        <a class="navbar-brand" href="HistoryOfGamesAndCreation.html">Kahoot</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Quiz history</a>
+                    <a class="nav-link" href="HistoryOfGamesAndCreation.html">Quiz history</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Profile
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+                        <span class="dropdown-item-text">User Name</span>
+                        <span class="dropdown-item-text">user@example.com</span>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="../AnonymousUser/Login.html">Log out</a>
+                    </div>
                 </li>
             </ul>
         </div>
