--- a/HTMLCode/LoggedInUser(SessionRequired)/KahootGamePin.html
+++ b/HTMLCode/LoggedInUser(SessionRequired)/KahootGamePin.html
@@ -3,10 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -19,24 +16,21 @@
     <title>Kahoot</title>
     <style>
       .code-panel {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        position: relative;
         text-align: center;
-        /* Here below you can change the size easily */
         font-size: 5rem;
         border: 3px solid #ccc;
         padding: 20px;
         border-radius: 25px;
         background-color: #f9f9f9;
         z-index: 1;
+        margin-bottom: 20px;
       }
       .user-container {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
         gap: 20px;
-        margin-top: 20px;
+        padding: 0 20px;
       }
       .user-object {
         text-align: center;
@@ -55,7 +49,7 @@
   <body>
     <!-- Top Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Kahoot</a>
+      <a class="navbar-brand" href="HistoryOfGamesAndCreation.html">Kahoot</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -69,26 +63,37 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
+          <li class="nav-item">
+            <a class="nav-link" href="HistoryOfGamesAndCreation.html">Quiz history</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="profileDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
             >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Create Quiz</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Profile</a>
+              Profile
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+              <span class="dropdown-item-text">User Name</span>
+              <span class="dropdown-item-text">user@example.com</span>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="../AnonymousUser/Login.html">Log out</a>
+            </div>
           </li>
         </ul>
       </div>
     </nav>
 
     <!-- Central Code Panel -->
-    <div class="code-panel">123456</div>
-
-    <!-- Container for User Objects -->
     <div class="container mt-5">
+      <div class="code-panel">123456</div>
+
+      <!-- Container for User Objects -->
       <div class="user-container" id="userContainer">
         <!-- User objects will be dynamically added here -->
       </div>
@@ -115,7 +120,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- Add User Objects ALI JEBENO NE DELA -->
+    <!-- Add User Objects -->
     <script>
       function addUserObject(name, icon) {
         var userContainer = document.getElementById("userContainer");
@@ -132,28 +137,30 @@
       // Example usage
       addUserObject("Alice", "https://via.placeholder.com/50");
       addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
+      addUserObject("Charlie", "https://via.placeholder.com/50");
+      addUserObject("Dave", "https://via.placeholder.com/50");
+      addUserObject("Eve", "https://via.placeholder.com/50");
       addUserObject("Alice", "https://via.placeholder.com/50");
       addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
+      addUserObject("Charlie", "https://via.placeholder.com/50");
+      addUserObject("Dave", "https://via.placeholder.com/50");
+      addUserObject("Eve", "https://via.placeholder.com/50");
       addUserObject("Alice", "https://via.placeholder.com/50");
       addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
+      addUserObject("Charlie", "https://via.placeholder.com/50");
+      addUserObject("Dave", "https://via.placeholder.com/50");
+      addUserObject("Eve", "https://via.placeholder.com/50");
       addUserObject("Alice", "https://via.placeholder.com/50");
       addUserObject("Bob", "https://via.placeholder.com/50");
+      addUserObject("Charlie", "https://via.placeholder.com/50");
+      addUserObject("Dave", "https://via.placeholder.com/50");
+      addUserObject("Eve", "https://via.placeholder.com/50");
+      addUserObject("Alice", "https://via.placeholder.com/50");
       addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
-      addUserObject("Bob", "https://via.placeholder.com/50");
+      addUserObject("Charlie", "https://via.placeholder.com/50");
+      addUserObject("Dave", "https://via.placeholder.com/50");
+      addUserObject("Eve", "https://via.placeholder.com/50");
+      
     </script>
   </body>
 </html>
