--- a/HTMLCode/AnonymousUser/Login.html
+++ b/HTMLCode/AnonymousUser/Login.html
@@ -15,12 +15,13 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet"  href="/ResourcesForCSS/Shapes.css"/>
 
     <title>Login</title>
   </head>
   <body>
-    <!-- This is the outside panel -->
+    <!-- <h1 class="text-center">Hello, world!</h1> -->
+
+    <!-- This is the outisde panel -->
     <div
       class="container d-flex justify-content-center align-items-center"
       style="min-height: 100vh"
@@ -31,41 +32,50 @@
           <!-- This is the form on login site -->
           <form>
             <div class="form-group">
-              <label for="exampleInputEmail1">Email adresa / korisničko ime</label>
-              <input class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+              <label for="exampleInputUsername1"
+                >Korisničko ime</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="exampleInputUsername1"
+                aria-describedby="usernameHelp"
+              />
               <small id="emailHelp" class="form-text text-muted"
                 >Nikada nećemo dijeliti vašu e-poštu ni s kim drugim.</small
               >
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Lozinka</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" />
+              <input
+                type="password"
+                class="form-control"
+                id="exampleInputPassword1"
+              />
             </div>
             <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1" />
-              <label class="form-check-label" for="exampleCheck1">Zapamti me</label>
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="exampleCheck1"
+              />
+              <label class="form-check-label" for="exampleCheck1"
+                >Zapamti me</label
+              >
             </div>
 
             <div>
-              <button type="submit" class="btn btn-primary mb-3">Logiraj se</button>
+              <button type="submit" class="btn btn-primary mb-3" id="btn-login">
+                Logiraj se
+              </button>
             </div>
-            <div>
-              <p class="mb-0">
-                Zaboravio si lozinku? <a href="../workInProgress.html">Resetiraj lozinku</a>
-              </p>
-            </div>
+
             <div>
               <p>Nemaš račun? <a href="Registration.html">Registriraj se</a></p>
             </div>
           </form>
         </div>
       </div>
-    </div>
-
-    <!-- Background shapes -->
-    <div class="background-shapes">
-      <div class="triangle"></div>
-      <div class="rectangle"></div>
     </div>
 
     <!-- Optional JavaScript -->
@@ -85,5 +95,13 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+
+
+    
+    <script src="/JS/login.js"></script>
+
+
+
   </body>
 </html>
+
