--- a/HTMLCode/AnonymousUser/Index.html
+++ b/HTMLCode/AnonymousUser/Index.html
@@ -8,27 +8,81 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
-    <title>Kahoot</title>
+    <!-- External CSS for custom shapes (not shown) -->
+    <link rel="stylesheet"  href="/ResourcesForCSS/Shapes.css"/>
     
- 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
+    <!-- Internal CSS for additional styling -->
+    <style>
+        /* CSS for centering and sizing */
+        body, html {
+            height: 100%;
+            margin: 0;
+            font-family: 'Pacifico', cursive; /* Apply fancy font to the entire document */
+        }
+        .container {
+            display: flex;
+            justify-content: center; /* Center align horizontally */
+            align-items: center; /* Center align vertically */
+            height: 100%; /* Full height */
+            transform: translateY(-50px); /* Move up by 50px */
+        }
+        .form-group label {
+            font-size: 1.5rem; /* Larger font size */
+            display: block; /* Make labels block elements for easier styling */
+            margin-bottom: 10px; /* Space between label and input */
+        }
+        .form-control {
+            font-size: 1.2rem; /* Larger font size for inputs */
+            text-align: center; /* Center align text in inputs */
+            font-family: 'Pacifico', cursive; /* Apply fancy font to inputs */
+        }
+        .hidden-on-load {
+            opacity: 0;
+            position: relative;
+            top: 20px; /* Initial position below the quiz code input */
+            transition: opacity 0.5s ease-in-out, top 0.5s ease-in-out;
+        }
+        .visible {
+            opacity: 1;
+            top: 0; /* Slide up to its final position */
+        }
+    </style>
+
+    <title>Arendt</title>
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="row">
+    <!-- Main content container -->
+    <div class="container">
+        <div class="row w-100">
             <div class="col-md-6 offset-md-3">
-                <form>
+                <!-- Form for entering quiz code and additional info -->
+                <form id="quizForm">
+                    <!-- Quiz Code input field -->
                     <div class="form-group">
                         <label for="quizCode">Quiz Code</label>
-                        <input type="text" class="form-control" id="quizCode" placeholder="Enter quiz code">
+                        <input type="text" class="form-control" id="quizCode" placeholder="Enter quiz code" required>
                     </div>
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                    <!-- Hidden content revealed after submitting quiz code -->
+                    <div id="hiddenContent" class="hidden-on-load">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                        </div>
+                        <!-- Button to join the quiz -->
+                        <button type="submit" class="btn btn-primary">Join Quiz</button>
                     </div>
-                    <button type="submit" class="btn btn-primary">Join Quiz</button>
                 </form>
             </div>
         </div>
+    </div>
+
+    <!-- Background shapes (not shown) -->
+    <div class="background-shapes">
+        <div class="triangle"></div>
+        <div class="rectangle"></div>
     </div>
 
     <!-- Optional JavaScript -->
@@ -36,5 +90,22 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+    <!-- Custom JavaScript to handle form submission and animations -->
+    <script>
+        $(document).ready(function() {
+            $('#quizForm').on('submit', function(event) {
+                event.preventDefault(); // Prevent form submission
+
+                // Calculate the height of the quiz code input
+                var quizCodeHeight = $('#quizCode').outerHeight(true);
+
+                // Show hidden content with animation
+                $('#hiddenContent')
+                    .css({ 'top': quizCodeHeight + 'px' })
+                    .addClass('visible');
+            });
+        });
+    </script>
 </body>
 </html>
