--- a/HTMLCode/AnonymousUser/Login.html
+++ b/HTMLCode/AnonymousUser/Login.html
@@ -15,7 +15,8 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet"  href="/ResourcesForCSS/Shapes.css"/>
+    <!-- Custom CSS for background shapes -->
+    <link rel="stylesheet" href="/ResourcesForCSS/Shapes.css" />
 
     <title>Login</title>
   </head>
@@ -28,21 +29,33 @@
       <div class="card" style="width: 100%; max-width: 400px">
         <div class="card-body">
           <h1 class="d-flex justify-content-center">Prijavi se</h1>
-          <!-- This is the form on login site -->
+          <!-- Login form -->
           <form>
             <div class="form-group">
               <label for="exampleInputEmail1">Email adresa / korisničko ime</label>
-              <input class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+              <input
+                class="form-control"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+              />
               <small id="emailHelp" class="form-text text-muted"
                 >Nikada nećemo dijeliti vašu e-poštu ni s kim drugim.</small
               >
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Lozinka</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" />
+              <input
+                type="password"
+                class="form-control"
+                id="exampleInputPassword1"
+              />
             </div>
             <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1" />
+              <input
+                type="checkbox"
+                class="form-check-input"
+                id="exampleCheck1"
+              />
               <label class="form-check-label" for="exampleCheck1">Zapamti me</label>
             </div>
 
