--- a/HTMLCode/AnonymousUser/PlayerAnswers.html
+++ b/HTMLCode/AnonymousUser/PlayerAnswers.html
@@ -22,85 +22,279 @@
     />
 
     <style>
+       .spinner-container {
+      display: none; /* Initially hide spinner */
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1000; /* Ensure it's above other content */
+    }
       .answer-buttons {
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        position: relative;
+
+        flex-wrap: wrap;
+        justify-content: center; /* Center horizontally */
+        align-items: center; /* Center vertically */
+        position: absolute;
+        top: 5px; /*<--*/
+        height: 88vh;
+        width: 100%;
       }
 
       .btn-answer {
-        width: 100%;
-        height: 150px;
-        font-size: 1.5rem;
+        height: 375px;
+        width: 825px;
+        font-size: 2.5rem;
         display: flex;
         align-items: center;
         justify-content: center;
+        margin: 0 5px;
       }
-
 
       .answer-buttons .overlay {
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
+        width: 100px;
         height: 100%;
         background-color: rgba(255, 255, 255, 0.8);
         z-index: 10;
       }
-    </style>
 
-    <title>Kahoot</title>
+
+      @media (max-width: 1800px) {
+
+      .answer-buttons {
+        top: 70px;
+        height: 77vh;
+      }
+      .btn-answer {
+        height: 375px;
+        width: 775px;
+        font-size: 2rem;
+        margin: 0 5px 10px;
+      }
+      }
+
+      @media (max-width: 1600px) {
+
+        .answer-buttons {
+          top: 130px;
+          height: 65vh;
+        }
+        .btn-answer {
+          height: 300px;
+          width: 660px;
+          font-size: 2rem;
+          margin: 0 5px 10px;
+        }
+      }
+
+      @media (max-width: 1400px) {
+        .answer-buttons {
+          top: 140px;
+          height: 63vh;
+        }
+        .btn-answer {
+          height: 300px;
+          width: 575px;
+          font-size: 2rem;
+          margin: 0 5px 10px;
+        }
+      }
+
+      @media (max-width: 1200px) {
+        .answer-buttons {
+          top: 150px;
+          height: 59vh;
+        }
+        .btn-answer {
+          height: 275px;
+          width: 475px;
+          font-size: 2rem;
+          margin: 0 5px 10px;
+        }
+      }
+
+      @media (max-width: 1000px) {
+        .answer-buttons {
+          top: 160px;
+          height: 58vh;
+        }
+        .btn-answer {
+          height: 275px;
+          width: 375px;
+          font-size: 2rem;
+          margin: 0 5px 10px;
+        }
+      }
+
+      @media (max-width: 800px) {
+        .answer-buttons {
+          top: 140px;
+          height: 65vh;
+        }
+        .btn-answer {
+          height: 300px;
+          width: 275px;
+          font-size: 2rem;
+          margin: 0 5px 10px;
+        }
+      }
+
+      @media (max-width: 600px) {
+        .answer-buttons {
+          top: 140px;
+          height: 64vh;
+        }
+        .btn-answer {
+          height: 300px;
+          width: 230px;
+          font-size: 2rem;
+          margin: 0 5px 10px;
+        }
+      }
+
+      @media (max-width: 500px) {
+        .answer-buttons {
+          top: 125px;
+          height: 61vh;
+        }
+
+        .btn-answer {
+          margin: 0 5px 5px;
+          height: 300px;
+          width: 190px;
+          font-size: 1rem;
+        }
+      }
+
+
+      @media (max-width: 400px) {
+        .answer-buttons {
+          top: 100px;
+          height: 55vh;
+        }
+
+        .btn-answer {
+          margin: 0 5px 8px;
+          height: 250px;
+          width: 150px;
+          font-size: 1rem;
+        }
+      }
+
+      /* Additional style for bottom navigation */
+      .bottom-nav {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+        background-color: #f8f9fa;
+        padding: 10px 0;
+        border-top: 1px solid #dee2e6;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+
+      .bottom-nav .navbar-text {
+        text-align: center;
+      }
+
+      .bottom-nav .navbar-text.points {
+        font-size: 1.1rem;
+        font-weight: bold;
+        color: #333; /* Darker color */
+      }
+    </style>
+    <link rel="stylesheet"  href="/ResourcesForCSS/Shapes.css"/>
+    <title>Arendt</title>
   </head>
   <body>
-    <h1 class="mb-4">Game-pin: 5819</h1>
-    <div class="container text-center mt-2">
-      
-
-      <div class="row answer-buttons">
-        <div class="overlay" id="overlay"></div>
-        <div class="col-md-6 mb-3">
-          <button class="btn btn-danger btn-answer">
-            <i class="fas fa-star fa-3x"></i>
-          </button>
-        </div>
-        <div class="col-md-6 mb-3">
-          <button class="btn btn-primary btn-answer">
-            <i class="fas fa-heart fa-3x"></i>
-          </button>
-        </div>
-        <div class="col-md-6 mb-3">
-          <button class="btn btn-warning btn-answer">
-            <i class="fas fa-smile fa-3x"></i>
-          </button>
-        </div>
-        <div class="col-md-6 mb-3">
-          <button class="btn btn-success btn-answer">
-            <i class="fas fa-thumbs-up fa-3x"></i>
-          </button>
-        </div>
+    <nav class="navbar navbar-expand navbar-light bg-light">
+      <!-- Top Navigation Bar -->
+      <a class="navbar-brand" href="#">Arendt-code: 123456</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: #333; font-weight: bold;">Mateo</a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="profileDropdown">
+              <span class="dropdown-item-text">Mateo</span>
+              <span class="dropdown-item-text">user@example.com</span>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="../AnonymousUser/Login.html">Log out</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  
+    <div class="overlay" id="overlay"></div>
+    <div class="answer-buttons mt-5">
+      <div class="d-flex">
+        <button class="btn btn-danger btn-answer" onclick="showSpinner()">
+          <i class="fas fa-star fa-3x"></i>
+        </button>
+      </div>
+      <div class="d-flex">
+        <button class="btn btn-primary btn-answer" onclick="showSpinner()">
+          <i class="fas fa-square fa-3x"></i>
+        </button>
+      </div>
+      <div class="d-flex">
+        <button class="btn btn-dark btn-answer" onclick="showSpinner()">
+          <i class="fas fa-crown fa-3x"></i>
+        </button>
+      </div>
+      <div class="d-flex">
+        <button class="btn btn-success btn-answer" onclick="showSpinner()">
+          <i class="fas fa-circle fa-3x"></i>
+        </button>
       </div>
     </div>
+  
+    <!-- Spinner -->
+     <div class = "spinner-container" id = "spinner">
+    <div class="spinner-border" style="width: 3rem; height: 3rem;">
+      <div class="spinner-border text-primary" role="status">
+        <span class="sr-only">Loading...</span>
+      </div>
+    </div>
+  </div>
+  
+    <!-- Bottom Navigation Bar -->
+    <nav class="navbar navbar-light bg-light bottom-nav">
+      <span class="navbar-text" style="color: #333; font-weight: bold;">Mateo</span>
+      <span class="navbar-text points" style="color: #333; font-weight: bold;">Points: 1000</span>
+    </nav>
+  
+    <!-- Background shapes -->
+    <div class="background-shapes">
+      <div class="triangle"></div>
+      <div class="rectangle"></div>
+    </div>
+  
+    <!-- jQuery, Popper.js, Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  
+    <script>
+      function showSpinner() {
+        // Hide answer buttons
+        document.querySelector('.answer-buttons').style.display = 'none';
+        // Show spinner
+        document.getElementById('spinner').style.display = 'block';
+      }
+    </script>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
-      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-      crossorigin="anonymous"
-    ></script>
-
-    <!-- OVO TREBA FIXAT!! sakrije buttons prije nego mogu odgovoriti. ali cu vjerovatno koristiti loading gif -->
+    <!-- Hide overlay initially -->
     <script>
       document.getElementById("overlay").style.display = "none";
     </script>
