Izmjena i dorada CreateQuiz.html datoteke

--- a/HTMLCode/LoggedInUser/KahootGamePin.html
+++ b/HTMLCode/LoggedInUser/KahootGamePin.html
@@ -91,7 +91,7 @@
 
     <!-- Central Code Panel -->
     <div class="container mt-5">
-      <div class="code-panel">123456</div>
+      <div class="code-panel"><span id="session-code">Loading...</span></div>
 
       <!-- Container for User Objects -->
       <div class="user-container" id="userContainer">
@@ -119,6 +119,7 @@
       integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
       crossorigin="anonymous"
     ></script>
+    <script src="/JS/KahootGamePin.js"></script>
 
     <!-- Add User Objects -->
     <script>
@@ -162,5 +163,7 @@
       addUserObject("Eve", "https://via.placeholder.com/50");
       
     </script>
+
+    
   </body>
 </html>
