--- a/HTMLCode/AnonymousUser/Index.html
+++ b/HTMLCode/AnonymousUser/Index.html
@@ -22,8 +22,8 @@
                         <input type="text" class="form-control" id="quizCode" placeholder="Enter quiz code">
                     </div>
                     <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                        <label for="name">Nickname</label>
+                        <input type="text" class="form-control" id="nickname" placeholder="Enter your name">
                     </div>
                     <button type="submit" class="btn btn-primary">Join Quiz</button>
                 </form>
