--- a/HTMLCode/AnonymousUser/Login.html
+++ b/HTMLCode/AnonymousUser/Login.html
@@ -8,6 +8,8 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
+
     <!-- Bootstrap CSS -->
     <link
       rel="stylesheet"
@@ -41,9 +43,7 @@
                 id="exampleInputUsername1"
                 aria-describedby="usernameHelp"
               />
-              <small id="emailHelp" class="form-text text-muted"
-                >Nikada nećemo dijeliti vašu e-poštu ni s kim drugim.</small
-              >
+         
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Lozinka</label>
@@ -52,16 +52,6 @@
                 class="form-control"
                 id="exampleInputPassword1"
               />
-            </div>
-            <div class="form-group form-check">
-              <input
-                type="checkbox"
-                class="form-check-input"
-                id="exampleCheck1"
-              />
-              <label class="form-check-label" for="exampleCheck1"
-                >Zapamti me</label
-              >
             </div>
 
             <div>
@@ -97,11 +87,11 @@
     ></script>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js"></script>
     
+    <!-- bibliotea za dekodiranje jwt -->
+
     <script src="/JS/login.js"></script>
-
-
-
   </body>
 </html>
 
