--- a/HTMLCode/AnonymousUser/Registration.html
+++ b/HTMLCode/AnonymousUser/Registration.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta
+    <meta 
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    /> 
 
-    <!-- Bootstrap CSS -->
-    <link
+    <!-- Bootstrap CSS --> 
+    <link 
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
@@ -20,7 +20,7 @@
 
     <title>Registration</title>
   </head>
-  <body>
+  <body> 
     <!-- <h1 class="text-center">Hello, world!</h1> -->
 
     <!-- This is the outisde panel -->
@@ -31,42 +31,53 @@
          
           <h1 class = "d-flex justify-content-center">Registriraj se</h1>
            <!-- This is the form on login site -->
-          <form>
+          <form >
             <div class="form-group">
-              <label for="exampleInputEmail1">Email adresa / korisničko ime:</label>
-              <input
-                type="email"
+              <label for="exampleInputUsername1">Korisničko ime</label>
+              <input 
+                type="text"
                 class="form-control"
-                id="exampleInputEmail1"
+                id="exampleInputUsername1"
                 aria-describedby="emailHelp"
-              />
-              <small id="emailHelp" class="form-text text-muted"
-                >Nikada nećemo dijeliti vašu e-poštu ni s kim drugim.</small
-              >
-            </div>
-            <div class="form-group">
+              /> 
+            </div> 
+            <div class="form-group"> 
               <label for="exampleInputPassword1">Lozinka</label>
               <input
-                type="password"
-                class="form-control"
+                type="password" 
+                class="form-control" 
                 id="exampleInputPassword1"
-              />
-            </div>
-            <div class="form-group form-check">
-              <input
-                type="checkbox"
-                class="form-check-input"
-                id="exampleCheck1"
-              />
-              <label class="form-check-label" for="exampleCheck1"
-                >Zapamti me</label
-              >
-            </div>
-
-            <div>
-              <button type="submit" class="btn btn-primary mb-3">
-                Logiraj se
-              </button>
+              /> 
+            </div> 
+            <div class="form-group"> 
+              <label for="exampleInputFirstName1">Ime</label>
+              <input 
+                type="text" 
+                class="form-control" 
+                id="exampleInputFirstName1" 
+              /> 
+            </div> 
+            <div class="form-group"> 
+              <label for="exampleInputEmail1">Email</label>
+              <input 
+                type="email" 
+                class="form-control"
+                id="exampleInputEmail1"
+              /> 
+            </div> 
+            <div class="form-group"> 
+              <label for="exampleInputLastName1">Prezime</label>
+              <input 
+                type="text" 
+                class="form-control" 
+                id="exampleInputLastName1" 
+              /> 
+            </div> 
+            <div> 
+              <button type="submit" class="btn btn-primary mb-3" 
+              id="btn-register"> 
+                Registriraj se 
+              </button> 
             </div>
             <div>
               <p>Imaš račun? <a href="Login.html">Prijavi se</a></p>
@@ -82,7 +93,8 @@
       <div class="rectangle"></div>
     </div>
 
-    <!-- Optional JavaScript -->
+    <!-- Optional JavaScript --> 
+     <script src="/Js/register.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
