--- a/HTMLCode/LoggedInUser(SessionRequired)/GameProgress.html
+++ b/HTMLCode/LoggedInUser(SessionRequired)/GameProgress.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -226,11 +226,13 @@
 </head>
 <body>
 
-  <div class="container question-panel text-center">
-    <h1 class="mb-4 mt-3">How can educators adapt their teaching methods to better accommodate diverse learning styles and ensure all students have equal opportunities for academic success?</h1>
-  </div>
+  <div id="GameProgressPage"> 
+    
+  <div class="container question-panel text-center" id="question">  
+    <h1 class="mb-4 mt-3">How can educators adapt their teaching methods to better accommodate diverse learning styles and ensure all students have equal opportunities for academic success?</h1> 
+  </div> 
 
-  <div class="container container-center text-center">
+    <div class="container container-center text-center" id="answerContainer"> 
     <div class="timer" id="timer">
       <div class="inner-circle"></div>
       <span id="timer-number"></span>
@@ -251,15 +253,17 @@
       </div>
     </div>
 
+    <div class="background-shapes">
+      <div class="triangle2"></div>
+      <div class="rectangle2"></div>
+    </div>
+  
+    <!-- Next button positioned at bottom right -->
+    <button class="btn btn-primary btn-next">Next</button>
+  
   </div>
 
-  <div class="background-shapes">
-    <div class="triangle2"></div>
-    <div class="rectangle2"></div>
   </div>
-
-  <!-- Next button positioned at bottom right -->
-  <button class="btn btn-primary btn-next">Next</button>
 
   <div class="overlay-panel" id="overlay" style="display: none;">
     <h1 class="pb-5 font-weight-bold display-4">Leaderboard:</h1>
@@ -283,51 +287,21 @@
       <span class="player-name">5th player: Borna</span>
       <span class="player-points">100 points</span>
     </div>
-    <button class="btn btn-primary btn-next">Next</button>
-
+    <button class="btn btn-primary btn-next" id="btnLeaderboard">Next</button> 
+    
     <div class="background-shapes">
       <div class="triangle"></div>
       <div class="rectangle"></div>
-    </div>
-  </div>
+    </div> 
+  </div> 
 
-  <!-- Optional JavaScript -->
+  <!-- Optional JavaScript --> 
+  <script src="/JS/game.js"></script> 
+  <script src="/JS/kahootgamepin.js"></script> 
+
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPoIEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-  <script>
-    // Timer functionality
-    var totalTime = 7; // Total time for the timer
-    var timeLeft = totalTime; // Time left
-    var timerElement = document.getElementById('timer');
-    var timerNumberElement = document.getElementById('timer-number');
-    var overlayElement = document.getElementById('overlay');
-
-    var timerInterval = setInterval(function() {
-      if (timeLeft <= 0) {
-        var angle = ((totalTime - timeLeft) / totalTime) * 360;
-        timerElement.style.background = `conic-gradient(transparent 0% ${angle}deg, red ${angle}deg 360deg)`;
-        clearInterval(timerInterval);
-        timerNumberElement.innerHTML = "Time!";
-        overlayElement.style.display = 'flex'; // Display the overlay
-      } else {
-        timerNumberElement.innerHTML = timeLeft;
-        var angle = ((totalTime - timeLeft) / totalTime) * 360;
-        timerElement.style.background = `conic-gradient(transparent 0% ${angle}deg, green ${angle}deg 360deg)`;
-
-        if ((timeLeft <= totalTime * 0.50) && (timeLeft > totalTime * 0.25)) {
-          timerElement.style.background = `conic-gradient(transparent 0% ${angle}deg, yellow ${angle}deg 360deg)`;
-        }
-
-        // Change color to red when remaining time is 25% of total time
-        if (timeLeft <= totalTime * 0.25) {
-          timerElement.style.background = `conic-gradient(transparent 0% ${angle}deg, red ${angle}deg 360deg)`;
-        }
-      }
-      timeLeft -= 1;
-    }, 1000);
-  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script> 
 </body>
 </html>
